# error-collector

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
