[package]
name = "optional-error"
version = "0.1.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Simple crate to more easily work with an optional syn::Error"
repository = "https://github.com/MrGVSV/optional-error"
license = "MIT OR Apache-2.0"
keywords = ["proc", "macro", "optional", "error", "syn"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
exclude = [".github/**/*"]

[dependencies]
syn = { version = "1.0", default-features = false }